# kensuiou-local

./: .gitignore  Dockerfile  extract.py  face_features.json  face_identify.py  face_training.py  local.py  main.py  pyproject.toml  requirements.txt  server.py  view.py  write_sql.py
local/: local.py  main.py
models/: face_features.json
server/: main.py  predict.py
src/: capture.py  chess.py  db.py  face.py  main.py  main1.py  pose.py  predict.py  pyproject.toml  qr.py
