[project]
name = "local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "keyboard>=0.13.5",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "torch>=2.7.1",
    "websockets>=15.0.1",
]
