[project]
name = "local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "keyboard>=0.13.5",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "psycopg>=3.2.9",
    "pygame>=2.6.1",
    "setuptools>=80.9.0",
    "torch>=2.7.1",
    "websockets>=15.0.1",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
