[project]
name = "local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "psycopg>=3.2.9",
    "pygame>=2.6.1",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
